--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "common-tags": "^1.8.0",
     "discord.js": "^12.5.1",
     "express": "^4.17.1",
+    "firebase": "^8.1.2",
+    "firebase-admin": "^9.4.1",
     "ms": "^2.1.2"
   },
   "devDependencies": {},
