--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "express": "^4.17.1",
     "firebase": "^8.1.2",
     "firebase-admin": "^9.4.1",
+    "moment": "^2.29.1",
+    "moment-timezone": "^0.5.32",
     "ms": "^2.1.2"
   },
   "devDependencies": {},
