--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
     "ms": "^2.1.2",
-    "ytdl-core-discord": "^1.2.4"
+    "ytdl-core": "^4.1.4"
   },
   "devDependencies": {},
   "scripts": {
