--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "dependencies": {
+    "@discordjs/opus": "^0.3.3",
     "ascii-table": "^0.0.9",
     "common-tags": "^1.8.0",
     "discord.js": "^12.5.1",
@@ -13,6 +14,7 @@
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.32",
     "ms": "^2.1.2",
+    "opusscript": "0.0.7",
     "ytdl-core": "^4.1.4"
   },
   "devDependencies": {},
